log/build_2024-04-23_00-32-33/castelet/stderr.log
  File "/home/field/MANOS/install/castelet/lib/python3.8/site-packages/castelet/castelet.py", line 116
    self.castelet_ui.test.clicked.connect(self.calibrate) 5
                                                          ^
SyntaxError: invalid syntax

